feat: added the json and parquet extensions